CSS and spacing fixes

--- a/app/assets/stylesheets/about.scss
+++ b/app/assets/stylesheets/about.scss
@@ -40,7 +40,7 @@ aside:hover {
   border-top: 4px solid #26A69A;
   border-bottom: 4px solid #00695C;
   border-radius: 5px;
-  height: 480px;
+  height: 600px;
   width: 350px;
   box-shadow: 0 0 70px 10px #fff;
 }
