--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -33,7 +33,7 @@
   font-size: 1.25em;
 }
 
-.btn-danger {
+.btn-danger, .editbutton {
   width: 100%;
 }
 
